# open-assistant-api

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  README_JP.md  alembic.ini  docker-compose.middleware.yml  docker-compose.yml  main.py  pyproject.toml  worker.py
.github/workflows/: docker-image-api.yml  docker-image-playground-ui.yml  docker-image.yml
app/: utils.py
app/api/: deps.py  routes.py
app/api/v1/: action.py  assistant.py  assistant_file.py  files.py  message.py  runs.py  thread.py  token.py
app/core/doc_loaders/: doc_loader.py
app/core/runner/: context_integration_policy.py  llm_backend.py  llm_callback_handler.py  memory.py  pub_handler.py  thread_runner.py
app/core/runner/utils/: message_util.py  tool_call_util.py
app/core/tools/: __init__.py  base_tool.py  external_function_tool.py  file_search_tool.py  openapi_function_tool.py  retrieval.py  web_search.py
app/exceptions/: exception.py
app/libs/: class_loader.py  paginate.py  thread_executor.py  types.py  util.py
app/libs/bson/: errors.py  objectid.py
app/models/: __init__.py  action.py  assistant.py  assistant_file.py  base_model.py  file.py  message.py  message_file.py  run.py  run_step.py  thread.py  token.py  token_relation.py
app/providers/: app_provider.py  auth_provider.py  celery_app.py  database.py  handle_exception.py  logging_provider.py  pagination_provider.py  r2r.py  response.py  route_provider.py  storage.py
app/providers/middleware/: http_process_time.py  unhandled_exception_handler.py
app/schemas/: common.py  files.py  runs.py  threads.py
app/schemas/tool/: action.py  authentication.py
app/services/assistant/: assistant.py  assistant_file.py
app/services/file/: file.py
app/services/file/impl/: base.py  oss_file.py  r2r_file.py
app/services/message/: message.py
app/services/run/: run.py  run_step.py
app/services/thread/: thread.py
app/services/token/: token.py  token_relation.py
app/services/tool/: action.py  openapi_call.py  openapi_utils.py
app/tasks/: run_task.py
config/: celery.py  config.py  database.py  llm.py  logging.py  storage.py
docker/: entrypoint.sh  sources.list
docs/: CONTRIBUTING.md  CONTRIBUTING_EN.md
examples/: prerun.py  run_assistant.py  run_assistant_stream.py
examples/action/: run_with_auth_action.py
examples/assistant/: create_assistant_with_extra_body.py  create_assistant_with_memory.py
examples/tools/: run_assistant_with_custom_functions.py  run_assistant_with_image_message_file.py  run_assistant_with_retrieval.py  run_assistant_with_web_search.py
migrations/: env.py
migrations/versions/: 2023-12-13-15-09_eacc2313d69c.py  2024-01-07-17-46_66734dc3664b.py  2024-01-18-17-17_6db192bc124b.py  2024-01-25-15-41_283e8cbdf17a.py  2024-02-20-17-19_3b58937fb542.py  2024-02-21-16-42_ea929b1ef536.py  2024-02-23-15-55_e7339aab6549.py  2024-03-19-15-27_8dbb8f38ef77.py  2024-04-22-17-19_aa4bda3363e3.py  2024-05-28-11-35_1c667e62f698.py  2024-08-23-15-24_b217fafdb5f0.py  2024-11-15-18-30_5b2b73d0fdf6.py
playground-ui/: .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci-notify.js  .gitlab-ci.yml  .lintstagedrc.js  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc.js  .yarnrc  Dockerfile  README.md  package.json  tsconfig.json  ytt.config.ts
playground-ui/config/: config.dev.ts  config.prod.ts  config.test.ts  config.ts  proxy.ts  routes.ts
playground-ui/core/: mz.ts
playground-ui/core/components/: index.ts
playground-ui/core/components/error-boundary/: README.md  (+1 more)
playground-ui/core/config/: index.ts
playground-ui/core/hooks/: useLocalstorage.ts
playground-ui/deploy/nginx/: default_dev.conf  default_test.conf
playground-ui/mock/: user.ts
playground-ui/src/: access.ts  app.tsx  typings.d.ts
playground-ui/src/locales/: zh-CN.ts
playground-ui/src/pages/: 404.tsx
playground-ui/src/services/: index.ts
playground-ui/src/style/: index.less
playground-ui/src/types/: index.d.ts  type.d.ts
playground-ui/src/utils/: adaptor.ts  error-handler.ts  utils.ts
tests/: conftest.py
tests/e2e/: action_test.py  assistant_test.py  index.py  run_test.py  sub_stream_test.py  test_thread_api.py
tests/run/: run_with_assistant_extra_body_test.py  run_with_auth_action_test.py
tests/tools/: action_test.py  assistant_action_test.py  run_with_auth_action_test.py
tests/unit/: test_memory.py  test_objectid.py
(+53 files in other folders)
